remove guava and drop wizard from sor-client-common